// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`other props get passed to container 1`] = `
<span
  className="icon"
  title="Add some stuff"
>
  <i
    className="fa icon-plus"
  />
</span>
`;

exports[`render icon 1`] = `
<span
  className="icon"
>
  <i
    className="fa icon-plus"
  />
</span>
`;

exports[`render without container 1`] = `
<i
  className="fa icon-plus"
/>
`;

exports[`set size 1`] = `
<span
  className="icon is-large"
>
  <i
    className="fa icon-plus"
  />
</span>
`;

exports[`use 'a' if is link 1`] = `
<a
  className="icon"
>
  <i
    className="fa icon-plus"
  />
</a>
`;
